fix: visit methods